<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="5dp"
    android:paddingBottom="20dp">
    <Button
        android:id="@+id/restuarant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/iran_sans_bold"
        android:background="@drawable/home_page_button_round"
        android:text="@string/restuarant"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:textSize="@dimen/activity_title_font_size"/>
    <Button
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/iran_sans_bold"
        android:background="@drawable/home_page_button_round"
        android:text="@string/category"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="@dimen/activity_title_font_size"/>
    <Button
        android:id="@+id/offer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/iran_sans_bold"
        android:background="@drawable/home_page_button_round"
        android:text="@string/offer"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="@dimen/activity_title_font_size"/>
    <Button
        android:id="@+id/hottest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/iran_sans_bold"
        android:background="@drawable/home_page_button_round"
        android:text="@string/hottest"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="@dimen/activity_title_font_size"/>
    <Button
        android:id="@+id/video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/iran_sans_bold"
        android:background="@drawable/home_page_button_round"
        android:text="@string/video"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:textSize="@dimen/activity_title_font_size"/>

</LinearLayout>