<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightestGrayEver"
        android:orientation="vertical"
        android:paddingTop="?attr/actionBarSize">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/slider_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            android:paddingTop="5dp">

            <Button
                android:id="@+id/restuarant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/home_page_button_round"
                android:fontFamily="@font/iran_sans_bold"
                android:onClick="menuFragment"
                android:text="@string/restuarant"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/activity_title_font_size" />

            <Button
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/home_page_button_round"
                android:fontFamily="@font/iran_sans_bold"
                android:onClick="menuFragment"
                android:text="@string/category"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/activity_title_font_size" />

            <Button
                android:id="@+id/offer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/home_page_button_round"
                android:fontFamily="@font/iran_sans_bold"
                android:onClick="menuFragment"
                android:text="@string/offer"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/activity_title_font_size" />

            <Button
                android:id="@+id/hottest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/home_page_button_round"
                android:fontFamily="@font/iran_sans_bold"
                android:onClick="menuFragment"
                android:text="@string/hottest"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/activity_title_font_size" />

            <Button
                android:id="@+id/video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/home_page_button_round"
                android:fontFamily="@font/iran_sans_bold"
                android:onClick="menuFragment"
                android:text="@string/video"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/activity_title_font_size" />

        </LinearLayout>
        <!--ss1 s-->

        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="@color/white"-->
            <!--android:fontFamily="@font/iran_sans_bold"-->
            <!--android:paddingBottom="10dp"-->
            <!--android:paddingRight="15dp"-->
            <!--android:paddingTop="10dp"-->
            <!--android:text="@string/restuarant_list"-->
            <!--android:textColor="@color/colorTextTitle"-->
            <!--android:textSize="@dimen/resturant_list_font_size" />-->

        <!--<android.support.v7.widget.RecyclerView-->
            <!--android:id="@+id/restuarant_menu"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:background="@color/white"-->
            <!--android:nestedScrollingEnabled="false"></android.support.v7.widget.RecyclerView>-->

        <!--ss1 e-->

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>